Add tailwindcss and begin style show

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <% @events.each do |event| %>
-  <%= event.user.first_name %>
+  <p class="text-red-500"><%= event.user.first_name %></p>
   <%= event.date %>
   <%= event.nb_places %>
   <%= event.level %>
