--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,11 @@
+<div class="container bg-white">
+  <p class="text-5xl"><%= @event.title %></p>
 
 
-<div style="width: 100%; height: 600px;"
-     data-controller="mapbox"
-     data-mapbox-marker-value="<%= @marker.to_json %>"
-     data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+     <div style="width: 100%; height: 600px;"
+          data-controller="mapbox"
+          data-mapbox-marker-value="<%= @marker.to_json %>"
+          data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+     </div>
+</div>
+
