--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,32 @@
-<% @events.each do |event| %>
-  <p class="text-red-500"><%= event.user.first_name %></p>
-  <%= event.date %>
-  <%= event.nb_places %>
-  <%= event.level %>
-  <%= event.field.address %>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://marseillefootindoor.fr/images/visites/foot2.jpg);">
+  <div class="container">
+    <h1>Five</h1>
+    <p>Trouvez des joueurs près de chez vous</p>
+    <% if user_signed_in? %>
+      <%= link_to "Organiser un Five", new_event_path, class: "bg-sky-600 text-white p-2 px-5 p-1 rounded-full text-decoration-none" %>
+    <% else %>
+      <%= link_to "Se connecter", new_user_session_path, class: "bg-sky-600 text-white p-2 px-5 p-1 rounded-full text-decoration-none" %>
+  <% end %>
+  </div>
+</div>
+
+<div class="container mt-5">
+  <h2 class="text-3xl">Les prochains Five</h2>
+  <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-5 gap-5">
+    <% @events.each do |event| %>
+      <%= link_to event_path(event), class: "text-decoration-none text-black" do %>
+        <div class="card-trip">
+          <%= cl_image_tag event.photo.key, height: 300, width: 400, crop: :fill %>
+            <div class="card-trip-infos">
+              <div>
+                <h2><%= event.title %></h2>
+                <p><%= event.field.name %></p>
+                    </div>
+              <h2 class="card-trip-pricing">Places restantes: <%= event.nb_places %></h2>
+            </div>
+          </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
+
