--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,11 +1,59 @@
 <div class="container bg-white">
   <p class="text-5xl"><%= @event.title %></p>
-
-
-     <div style="width: 100%; height: 600px;"
-          data-controller="mapbox"
-          data-mapbox-marker-value="<%= @marker.to_json %>"
-          data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-     </div>
+  <div class="w-full h-80 bg-no-repeat bg-center bg-cover mb-10"
+       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.photo.key %>')"
+  >
+  </div>
+  <div class="event-name-container lg:grid grid-cols-3 grid-rows-3 mb-20">
+    <div class="col-start-1 col-end-3 flex items-center justify-between border-bottom border-gray-200 mx-10 pb-3">
+      <p class="text-3xl"><%= @event.field.name %></p>
+      <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+    </div>
+    <div class="location-field col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
+      <p class=""><%= @event.field.address %></p>
+      <p>Places restantes : <%= @event.nb_places %></p>
+    </div>
+    <div class="participants-pictures col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
+      <p class="">Ils participent déjà</p>
+      <div class="pictures flex justify-around mb-3">
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+      </div>
+    </div>
+    <div class="card row-start-1 row-end-4 col-start-3">
+      <p>Le <%= @event.date %></p>
+      <p>Niveau</p>
+      <div class="level-ball flex justify-center gap-3">
+        <% @event.level.times do%>
+          <i class="fa-regular fa-futbol"></i>
+        <% end %>
+      </div>
+      <div>
+        <% if @event.booked?(current_user) %>
+          <%= link_to "Delete",
+                      event_reservation_path(@event.booked?(current_user)),
+                      method: :delete,
+                      turbo_confirm: "Are you sure?"
+          %>
+        <% else %>
+          <%= simple_form_for [@event, @reservation] do |f| %>
+            <%= f.button :submit %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <div style="width: 100%; height: 600px;"
+        data-controller="mapbox"
+        data-mapbox-marker-value="<%= @marker.to_json %>"
+        data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
 
