--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,11 @@
   <div class="event-name-container lg:grid grid-cols-3 grid-rows-3 mb-20">
     <div class="col-start-1 col-end-3 flex items-center justify-between border-bottom border-gray-200 mx-10 pb-3">
       <p class="text-3xl"><%= @event.field.name %></p>
-      <%= cl_image_tag @event.user.photo.key, height: 60, width: 60, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <% if @event.user.photo.attached? %>
+        <%= cl_image_tag @event.user.photo.key, height: 60, width: 60, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <% else %>
+        <%= image_tag "https://eu.ui-avatars.com/api/?rounded=true&name=#{@event.user.first_name}+#{@event.user.last_name}", height: 40, width: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <% end %>
 
     </div>
     <div class="location-field col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
@@ -17,15 +21,23 @@
     <div class="participants-pictures col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
       <p class="">Ils participent déjà</p>
       <div class="pictures flex justify-around mb-3">
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <% @reservations.each do |reservation| %>
+          <% if reservation.user.photo.attached? %>
+            <%= cl_image_tag reservation.user.photo.key, height: 60, width: 60, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% else %>
+            <%= image_tag "https://eu.ui-avatars.com/api/?rounded=true&name=#{reservation.user.first_name}+#{reservation.user.last_name}", height: 40, width: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
+        <% end %>
+
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--        <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
       </div>
     </div>
     <div class="card row-start-1 row-end-4 col-start-3">
