--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -8,7 +8,11 @@
     <div class="lg:w-4/6">
       <div class="col-start-1 col-end-3 flex items-center justify-between border-bottom border-gray-200 mx-10 pb-3">
         <p class="text-3xl"><%= @reservation.event.field.name %></p>
-        <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+        <% if @reservation.event.user.photo.attached? %>
+          <%= cl_image_tag @reservation.event.user.photo.key, height: 60, width: 60, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% else %>
+          <%= image_tag "https://eu.ui-avatars.com/api/?rounded=true&name=#{@reservation.event.user.first_name}+#{@reservation.event.user.last_name}", height: 40, width: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% end %>
       </div>
       <div class="location-field col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
         <p class=""><%= @reservation.event.field.address %></p>
@@ -17,15 +21,22 @@
       <div class="participants-pictures col-start-1 col-end-3 mx-10 mt-4 border-bottom border-gray-200">
         <p class="">Ils participent déjà</p>
         <div class="pictures flex justify-around mb-3">
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
-          <div class="rounded-full bg-blue-500 w-14 h-14"></div>
+          <% @reservations.each do |reservation| %>
+            <% if reservation.user.photo.attached? %>
+              <%= cl_image_tag reservation.user.photo.key, height: 60, width: 60, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% else %>
+              <%= image_tag "https://eu.ui-avatars.com/api/?rounded=true&name=#{reservation.user.first_name}+#{reservation.user.last_name}", height: 40, width: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% end %>
+          <% end %>
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
+<!--          <div class="rounded-full bg-blue-500 w-14 h-14"></div>-->
         </div>
       </div>
     </div>
